:sparkles: add LINE stickers shop link

--- a/index.html
+++ b/index.html
@@ -27,6 +27,10 @@
         </div>
       </div>
     </div>
+    <div class="text">
+      <div><a href="https://line.me/S/sticker/7110330">https://line.me/S/sticker/7110330</a></div>
+      <div>LINEスタンプ販売中</div>
+    </div>
   </main>
 </body>
 </html>
